[gd_scene load_steps=13 format=3 uid="uid://bln1og3mu36mh"]

[ext_resource type="StyleBox" uid="uid://ccuocdfe5fudm" path="res://editor/ui/styles/panel_styles/panel_rounded_all.tres" id="1_r8miw"]
[ext_resource type="Theme" uid="uid://nxn5uapgdhhx" path="res://editor/ui/styles/font_styles/t_sci_fi_regular.tres" id="2_4f6gw"]
[ext_resource type="Script" path="res://editor/ui/document_display.gd" id="2_fa3rb"]
[ext_resource type="StyleBox" uid="uid://cweor237iacfe" path="res://editor/ui/styles/panel_styles/gradient_panel.tres" id="2_popv8"]
[ext_resource type="StyleBox" uid="uid://cjs2pnpup0ys7" path="res://editor/ui/styles/button_and_line_edit_styles/focus_invisible.tres" id="3_7wnwr"]
[ext_resource type="StyleBox" uid="uid://bdapxi8kfkyap" path="res://editor/ui/styles/button_and_line_edit_styles/bottom_bar/mini_button/hover_normal.tres" id="3_firge"]
[ext_resource type="StyleBox" uid="uid://c3yy373mpphkj" path="res://editor/ui/styles/button_and_line_edit_styles/tool_bar/button_regular/hover_normal.tres" id="3_ga47g"]
[ext_resource type="StyleBox" uid="uid://srkvy1wv8a2t" path="res://editor/ui/styles/button_and_line_edit_styles/tool_bar/button_regular/pressed.tres" id="4_bevf2"]
[ext_resource type="StyleBox" uid="uid://l8wdqqom1c4k" path="res://editor/ui/styles/button_and_line_edit_styles/bottom_bar/mini_button/pressed.tres" id="4_epqod"]
[ext_resource type="Theme" uid="uid://dvh0x5qyaaolk" path="res://editor/ui/styles/font_styles/t_number_display.tres" id="5_6k1ey"]
[ext_resource type="StyleBox" uid="uid://b1bkepq7spu42" path="res://editor/ui/styles/panel_styles/number_display_panel.tres" id="6_ngvct"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6oyx8"]
content_margin_bottom = 6.0

[node name="DocumentDisplay" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -507.0
offset_top = -253.0
offset_right = 517.0
offset_bottom = 259.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_r8miw")
script = ExtResource("2_fa3rb")
contents = Array[String](["[1iguess] Lorem Ipsum is simply dummy text of the printing and typesetting industry.\\n\\n\\n\\nLorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.", "maowmaowmaow", "x333 im a silly little femboy", "LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF6 [p]LOTS OF STUFF [p]LOTS OF STUFF2 [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF1 [p]LOTS OF STUFF [p]LOTS OF STUFF [p]LOTS OF STUFF [p]"])
marker_1 = null
marker_2 = null

[node name="ClosePageButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(43, 43)
layout_mode = 2
offset_left = 983.0
offset_top = 10.0
offset_right = 1014.0
offset_bottom = 41.0
theme = ExtResource("2_4f6gw")
theme_override_styles/normal = ExtResource("3_firge")
theme_override_styles/hover = ExtResource("3_firge")
theme_override_styles/pressed = ExtResource("4_epqod")
theme_override_styles/focus = ExtResource("3_7wnwr")
action_mode = 0
text = "❌"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 2

[node name="SearchBarHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="SearchControlsHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/SearchBarHBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="FirstResult" type="Button" parent="MarginContainer/VBoxContainer/SearchBarHBoxContainer/SearchControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
theme = ExtResource("2_4f6gw")
theme_override_styles/normal = ExtResource("3_ga47g")
theme_override_styles/hover = ExtResource("3_ga47g")
theme_override_styles/pressed = ExtResource("4_bevf2")
theme_override_styles/focus = ExtResource("3_7wnwr")
text = "|<"

[node name="PreviousResult" type="Button" parent="MarginContainer/VBoxContainer/SearchBarHBoxContainer/SearchControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
theme = ExtResource("2_4f6gw")
theme_override_styles/normal = ExtResource("3_ga47g")
theme_override_styles/hover = ExtResource("3_ga47g")
theme_override_styles/pressed = ExtResource("4_bevf2")
theme_override_styles/focus = ExtResource("3_7wnwr")
text = "<"

[node name="CurrentResultDisplay" type="Label" parent="MarginContainer/VBoxContainer/SearchBarHBoxContainer/SearchControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
theme = ExtResource("5_6k1ey")
theme_override_styles/normal = ExtResource("6_ngvct")
text = "88"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/SearchBarHBoxContainer/SearchControlsHBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4f6gw")
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxEmpty_6oyx8")
text = "/"
horizontal_alignment = 1

[node name="SumResultDisplay" type="Label" parent="MarginContainer/VBoxContainer/SearchBarHBoxContainer/SearchControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
theme = ExtResource("5_6k1ey")
theme_override_styles/normal = ExtResource("6_ngvct")
text = "88"
horizontal_alignment = 1
vertical_alignment = 2

[node name="NextResult" type="Button" parent="MarginContainer/VBoxContainer/SearchBarHBoxContainer/SearchControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
theme = ExtResource("2_4f6gw")
theme_override_styles/normal = ExtResource("3_ga47g")
theme_override_styles/hover = ExtResource("3_ga47g")
theme_override_styles/pressed = ExtResource("4_bevf2")
theme_override_styles/focus = ExtResource("3_7wnwr")
text = ">"

[node name="LastResult" type="Button" parent="MarginContainer/VBoxContainer/SearchBarHBoxContainer/SearchControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
theme = ExtResource("2_4f6gw")
theme_override_styles/normal = ExtResource("3_ga47g")
theme_override_styles/hover = ExtResource("3_ga47g")
theme_override_styles/pressed = ExtResource("4_bevf2")
theme_override_styles/focus = ExtResource("3_7wnwr")
text = ">|"

[node name="SearchLineEdit" type="LineEdit" parent="MarginContainer/VBoxContainer/SearchBarHBoxContainer" node_paths=PackedStringArray("shortcut_context")]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
shortcut_context = NodePath("../../../..")
theme_override_styles/focus = ExtResource("3_7wnwr")
placeholder_text = "Search for keywords.."

[node name="CancelSearchButton" type="Button" parent="MarginContainer/VBoxContainer/SearchBarHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(43, 43)
layout_mode = 2
theme = ExtResource("2_4f6gw")
theme_override_styles/normal = ExtResource("3_firge")
theme_override_styles/hover = ExtResource("3_firge")
theme_override_styles/pressed = ExtResource("4_epqod")
theme_override_styles/focus = ExtResource("3_7wnwr")
action_mode = 0
text = "❌"

[node name="GradientPanel" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_popv8")

[node name="PageRichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/focus = ExtResource("3_7wnwr")
bbcode_enabled = true

[node name="GradientPanel2" type="Panel" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_popv8")

[node name="PageControlsHBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="FirstPage" type="Button" parent="MarginContainer/VBoxContainer/PageControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
theme = ExtResource("2_4f6gw")
theme_override_styles/normal = ExtResource("3_ga47g")
theme_override_styles/hover = ExtResource("3_ga47g")
theme_override_styles/pressed = ExtResource("4_bevf2")
theme_override_styles/focus = ExtResource("3_7wnwr")
text = "|<"

[node name="PreviousPage" type="Button" parent="MarginContainer/VBoxContainer/PageControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
theme = ExtResource("2_4f6gw")
theme_override_styles/normal = ExtResource("3_ga47g")
theme_override_styles/hover = ExtResource("3_ga47g")
theme_override_styles/pressed = ExtResource("4_bevf2")
theme_override_styles/focus = ExtResource("3_7wnwr")
text = "<"

[node name="CurrentPageDisplay" type="Label" parent="MarginContainer/VBoxContainer/PageControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
theme = ExtResource("5_6k1ey")
theme_override_styles/normal = ExtResource("6_ngvct")
text = "88"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Label3" type="Label" parent="MarginContainer/VBoxContainer/PageControlsHBoxContainer"]
layout_mode = 2
theme = ExtResource("2_4f6gw")
theme_override_font_sizes/font_size = 34
theme_override_styles/normal = SubResource("StyleBoxEmpty_6oyx8")
text = "/"
horizontal_alignment = 1

[node name="SumPageDisplay" type="Label" parent="MarginContainer/VBoxContainer/PageControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(36, 36)
layout_mode = 2
theme = ExtResource("5_6k1ey")
theme_override_styles/normal = ExtResource("6_ngvct")
text = "88"
horizontal_alignment = 1
vertical_alignment = 2

[node name="NextPage" type="Button" parent="MarginContainer/VBoxContainer/PageControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
theme = ExtResource("2_4f6gw")
theme_override_styles/normal = ExtResource("3_ga47g")
theme_override_styles/hover = ExtResource("3_ga47g")
theme_override_styles/pressed = ExtResource("4_bevf2")
theme_override_styles/focus = ExtResource("3_7wnwr")
text = ">"

[node name="LastPage" type="Button" parent="MarginContainer/VBoxContainer/PageControlsHBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 35)
layout_mode = 2
theme = ExtResource("2_4f6gw")
theme_override_styles/normal = ExtResource("3_ga47g")
theme_override_styles/hover = ExtResource("3_ga47g")
theme_override_styles/pressed = ExtResource("4_bevf2")
theme_override_styles/focus = ExtResource("3_7wnwr")
text = ">|"
